Upgrade to Java 17 compile target and upgrade Mockito